--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -54,3 +54,9 @@
   background-color: lightgrey;
   padding: 0.5em;
 }
+
+.blogEntry {
+  border-style: solid;
+  padding: 0.25em;
+  margin: 2px;
+}
